fix overflow problem for on creating a panel

--- a/src/css/worldmap-panel.css
+++ b/src/css/worldmap-panel.css
@@ -1,3 +1,7 @@
+.mapcontainer {
+  overflow: hidden;
+}
+
 .info {
   padding: 6px 8px;
   font: 14px/16px Arial, Helvetica, sans-serif;
